@startuml
'https://plantuml.com/class-diagram

class User
{
email
balance
isAdmin
}

note right of User
  Admin role determined by boolean isAdmin.

  If isAdmin = true:
  Can view all orders
  Can edit and delete orders
  Can update customers balances
  Can manage products

  If isAdmin = false:
  Regular customer
  Can only see own data
end note

class Order
{
totalPrice
orderDateTime
status
}

class OrderLine
{
quantity
linePrice
}

class Cupcake
{
bottom
topping
price
}

class CupcakeBottom
{
name
price
}

class CupcakeTopping
{
name
price
}

User "1" -- "0..*" Order : places
Order "1" -- "1..*" OrderLine : contains
OrderLine "1" -- "1..*" Cupcake : contains
Cupcake "*" -- "1" CupcakeBottom : uses
Cupcake "*" -- "1" CupcakeTopping : uses

@enduml